# Movies-Finder

./: .dockerignore  .env  Dockerfile  README.md  api.yaml  browser_mcp.json  fastapi_app.py  main.py  movie_agent.py  package-lock.json  pyproject.toml  requirements.txt  tools.py
Download/mcp-server-demo/: .env  package.json  requirements.txt
