[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.29",
    "langsmith>=0.4.13",
    "mcp-use",
    "mcp[cli]>=1.12.4",
    "streamlit>=1.48.0",
]
